Fixed ugly spacing in new friend form on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
     font-size: 110%;
     color: gainsboro;
     background-color: black;
-    background-image: url("https://spacenews.com/wp-content/uploads/2018/05/24359364107_152b0152ff_k-879x485.jpg");
+    background-image: url("./24359364107_152b0152ff_k-879x485.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
